<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
  Copyright 2026 Enactic, Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  NOTE: dynamics.{hpp,cpp} in this package are derived from
  openarmx_gravity_comp by Chengdu Changshu Robot Co., Ltd. and remain
  under CC-BY-NC-SA 4.0. See the file headers for details.
-->
<package format="3">
  <name>openarm_gravity_comp</name>
  <version>0.1.0</version>
  <description>KDL-based gravity feedforward compensation node for OpenArm V10</description>
  <maintainer email="openarm_dev@enactic.ai">Enactic, Inc.</maintainer>
  <license>Apache-2.0 AND CC-BY-NC-SA-4.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>urdf</depend>
  <depend>urdfdom_headers</depend>
  <depend>orocos_kdl</depend>
  <depend>kdl_parser</depend>
  <depend>urdfdom</depend>

  <build_depend>eigen3_cmake_module</build_depend>
  <depend>Eigen3</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
